# PyCatan

./: .gitignore  README.md  benchmark_vs_random.py  benchmark_vs_random_resultados.csv  best_chromosome.json  entrenador_genetico.py  evaluador_exhaustivo.py  experimentador_hiperparametros.py  genetic_training_log.txt  genetic_training_log.txt.bak_20250520_140329  genetic_training_log.txt.bak_20250520_162525  genetic_training_log.txt.bak_20250520_163436  genetic_training_log.txt.bak_20250520_183907  genetic_training_log.txt.bak_20250520_211333  graficador_resultados.py  main.py  pyproject.toml  resultados_evaluacion_exhaustiva.csv  run_execution.py
Agents/: AdrianHerasAgent.py  AlexPastorAgent.py  AlexPelochoJaimeAgent.py  CarlesZaidaAgent.py  CrabisaAgent.py  EdoAgent.py  GeneticAgent.py  PabloAleixAlexAgent.py  RandomAgent.py  SigmaAgent.py  TristanAgent.py  helpers.py
Agents/TraceLoader/: TraceLoader.py
Classes/: Board.py  Constants.py  DevelopmentCards.py  Hand.py  Materials.py  TradeOffer.py
Interfaces/: AgentInterface.py
Managers/: AgentManager.py  BotManager.py  GameDirector.py  GameManager.py
Tests/: test_development_cards.py  test_game_director.py  test_game_manager.py  test_materials.py  test_trace_comparison.py
TraceLoader/: ..\Traces\2024-05-21 18_46_37.127353\games.json  TraceLoader.py  game_2.json
Visualizer/: index.html
best_chromosomes/: best_chromosome.json.20250522_111413.json  best_chromosome.json.20250522_231909.json  best_chromosome.json.20250522_232516.json  best_chromosome.json.20250524_104802.json
notebooks/: example.ipynb
(+109 files in other folders)
